Fix the overlapping of footer and menu
Ref. #190

--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   background-color: $footer-bg;
   color: $footer-text-color;
+  z-index: 3;
 
   .container {
     margin: 0 auto;
